Fix the wrapping issue for the last day

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,6 +1,6 @@
 .time_table_wrapper {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   height: 100%;
   margin: 0;
   font-family: 'Open Sans', sans-serif;
@@ -10,7 +10,7 @@
 
 .day {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   flex-direction: column;
   position: relative;
   background-color: #fff;
